Wed Dec 1 08:49:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>

        * include/makeinclude/platform_vxworks5.5.x.GNU:
          Fixed linking issues concerning ACE/TAO libraries.

Tue Nov 30 16:38:08 2004  J.T. Conklin  <jtc@acorntoolworks.com>

        * apps/gperf/tests/Makefile.am:

	  Changed to only generate idl.cpp from idl.gperf once.  The
	  attempt to generate it twice, the a second time in a different
	  directory failed because the "stamp" file was the same.

Tue Nov 30 17:32:29 2004  Steve Huston  <shuston@riverace.com>

	* m4/ace.m4: Added two new options, --enable-pthreads and
	  --enable-uithreads. These en/dis-able the use of Pthreads and
	  UI Threads (aka Solaris threads), respectively. Some platforms
	  (namely AIX) offer a hokey UI Threads that barely functions but
	  can't be used for any real work. Efforts to detect this and
	  automatically disable it have been unfruitful, so this option was
	  added. Pthreads defaults to yes, UI threads defaults to, except on
	  Solaris where it defaults to yes.

	* m4/threads.m4: Only do Pthreads/UIthreads checks if the corresponding
	  implementation is enabled by the command line (or default) using
	  the above new options.

Tue Nov 30 07:32:18 2004  Chad Elliott  <elliott_c@ociweb.com>

        * apps/gperf/tests/iout2_gen/.empty:
        * bin/MakeProjectCreator/templates/gnu.mpd:

          Reverted my previous change as it caused more problems than it
          solved.  Instead, after much research I've found that VPATH
          doesn't work when source files are generated into a directory
          other than '.', so I made a directory (iout2_gen) to hold the
          generated source (idl.cpp) from the iinset2 gperf test.

Tue Nov 30 09:51:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>

        * ace/ACE.inl:
          Implemented temporary fix for problems with VxWorks GNU toolchains.

Mon Nov 29 17:56:39 2004  Steve Huston  <shuston@riverace.com>
