@@ -1,10 +1,16 @@
 // $Id$
 
 #include "ace/OS_main.h"
+#include "ace/OS_Memory.h"
+#include "ace/OS_NS_stdio.h"
+#include "ace/OS_NS_string.h"
+#include "ace/Log_Msg.h"
+#include "ace/Message_Block.h"
 
 int ACE_TMAIN (int, ACE_TCHAR **)
 {
 #if 0
+// Just for the book...
 
 // Listing 1 code/ch12
   ACE_Message_Block *mb;
@@ -13,6 +19,7 @@ int ACE_TMAIN (int, ACE_TCHAR **)
   const char *deviceAddr= "Dev#12";
   mb->copy (deviceAddr, ACE_OS::strlen (deviceAddr)+1);
 // Listing 1
+#endif /* 0 */
 // Listing 2 code/ch12
   ACE_Message_Block *mb;
   ACE_NEW_RETURN (mb, ACE_Message_Block (128), -1);
@@ -25,7 +32,7 @@ int ACE_TMAIN (int, ACE_TCHAR **)
 // Listing 2
 // Listing 3 code/ch12
   ACE_DEBUG((LM_DEBUG,
-             ACE_TEXT ("Command Sequence --> %s\n"),
+             ACE_TEXT ("Command Sequence --> %C\n"),
              mb->rd_ptr ()));
   mb->rd_ptr (ACE_OS::strlen (mb->rd_ptr ())+1);
   mb->release ();
@@ -37,6 +44,7 @@ int ACE_TMAIN (int, ACE_TCHAR **)
   // Send an error notification to the receiver.
   mb->msg_type (ACE_Message_Block::MB_ERROR);
 // Listing 4
-#endif
+  mb->release ();
+
   return 0;
 }
